tests/compilefail75.out
[1mtests/compilefail75.pas:10:5: [0m[1m[91merror:[0m 'r' is of type that cannot be displayed by writeln()
    10 | 	writeln(r);